src/objects/Zip_Code_Data__c.object
<CustomObject>
    <description>Created by the Cloud Converter from http://ModelMetrics.com</description>
    <fields>
        <fullName>DMAZone__c</fullName>
        <label>DMA Zone</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <label>DMA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daylight_Savings_Time__c</fullName>
        <label>Daylight Savings Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Arrival_Date__c</fullName>
        <formula>Today()+ Transit_Time__c</formula>
        <label>Estimated Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OFFSET_DST__c</fullName>
        <description>UTC Offset Daylight Savings Time</description>
        <inlineHelpText>The Daylights Savings Time offset from UTC</inlineHelpText>
        <label>OFFSET DST</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OFFSET_ST__c</fullName>
        <description>UTC Offset for Standard time</description>
        <inlineHelpText>The Standard Time offset from UTC</inlineHelpText>
        <label>OFFSET ST</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quickbase_Id__c</fullName>
        <label>Quickbase Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transit_Time__c</fullName>
        <label>Transit Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transite_Time_1__c</fullName>
        <formula>Transit_Time__c + 1</formula>
        <label>Transite Time+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Zip Code Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DMA__c</columns>
        <columns>Timezone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DMA Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Code Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>